--- a/.github/workflows/win32.yml
+++ b/.github/workflows/win32.yml
@@ -138,22 +138,16 @@ jobs:
         shell: bash
         working-directory: ${{ runner.temp }}/perl-wer
 
-      - uses: kheiakiyama/install-azcopy-action@v1
-        with:
-          version: "v10"
       - name: upload
-        shell: pwsh
+        shell: bash
         run: |
-          Set-Location ${env:RUNNER_TEMP}
-          $pkg = Get-Content "${env:GITHUB_WORKSPACE}/package.json" -Encoding UTF8 -Raw | ConvertFrom-Json
-          $version = $pkg.version
-          azcopy_v10 login --service-principal --application-id $env:AZCOPY_SPA_APPLICATION_ID --tenant-id $env:AZCOPY_TENANT_ID
-          azcopy_v10 cp perl.zip "https://setupperl.blob.core.windows.net/actions-setup-perl/v$version/perl-${env:PERL_VERSION}-win32-x64.zip"
+          ACTIONS_VERSION=v$(< "$GITHUB_WORKSPACE/package.json" jq -r .version)
+          TEMP_DIR=$(cygpath "$RUNNER_TEMP")
+          mv "$TEMP_DIR/perl.zip" "$TEMP_DIR/perl-$PERL_VERSION-win32-x64.zip"
+          gh release upload --clobber "$ACTIONS_VERSION" "$TEMP_DIR/perl-$PERL_VERSION-win32-x64.zip"
         env:
           PERL_VERSION: ${{ matrix.perl }}
-          AZCOPY_SPA_APPLICATION_ID: ${{ secrets.AZCOPY_SPA_APPLICATION_ID }}
-          AZCOPY_SPA_CLIENT_SECRET: ${{ secrets.AZCOPY_SPA_CLIENT_SECRET }}
-          AZCOPY_TENANT_ID: ${{ secrets.AZCOPY_TENANT_ID }}
+          GITHUB_TOKEN: ${{ github.token }}
 
   build-multi-thread:
     runs-on: windows-2019
@@ -233,19 +227,13 @@ jobs:
         shell: bash
         working-directory: ${{ runner.temp }}/perl-wer
 
-      - uses: kheiakiyama/install-azcopy-action@v1
-        with:
-          version: "v10"
       - name: upload
-        shell: pwsh
+        shell: bash
         run: |
-          Set-Location ${env:RUNNER_TEMP}
-          $pkg = Get-Content "${env:GITHUB_WORKSPACE}/package.json" -Encoding UTF8 -Raw | ConvertFrom-Json
-          $version = $pkg.version
-          azcopy_v10 login --service-principal --application-id $env:AZCOPY_SPA_APPLICATION_ID --tenant-id $env:AZCOPY_TENANT_ID
-          azcopy_v10 cp perl.zip "https://setupperl.blob.core.windows.net/actions-setup-perl/v$version/perl-${env:PERL_VERSION}-win32-x64-multi-thread.zip"
+          ACTIONS_VERSION=v$(< "$GITHUB_WORKSPACE/package.json" jq -r .version)
+          TEMP_DIR=$(cygpath "$RUNNER_TEMP")
+          mv "$TEMP_DIR/perl.zip" "$TEMP_DIR/perl-$PERL_VERSION-win32-x64-multi-thread.zip"
+          gh release upload --clobber "$ACTIONS_VERSION" "$TEMP_DIR/perl-$PERL_VERSION-win32-x64-multi-thread.zip"
         env:
           PERL_VERSION: ${{ matrix.perl }}
-          AZCOPY_SPA_APPLICATION_ID: ${{ secrets.AZCOPY_SPA_APPLICATION_ID }}
-          AZCOPY_SPA_CLIENT_SECRET: ${{ secrets.AZCOPY_SPA_CLIENT_SECRET }}
-          AZCOPY_TENANT_ID: ${{ secrets.AZCOPY_TENANT_ID }}
+          GITHUB_TOKEN: ${{ github.token }}
