fox syntax error 2

--- a/.github/workflows/darwin.yml
+++ b/.github/workflows/darwin.yml
@@ -104,7 +104,7 @@ jobs:
           mv "$RUNNER_TEMP/perl.tar.zstd" "$RUNNER_TEMP/perl-$PERL_VERSION-darwin-x64.tar.zstd"
           gh release upload --clobber "$ACTIONS_VERSION" "$RUNNER_TEMP/perl-$PERL_VERSION-darwin-x64.tar.zstd"
         env:
-          GITHUB_TOKEN: ${{ github_token }}
+          GITHUB_TOKEN: ${{ github.token }}
 
   build-multi-thread:
     runs-on: macos-10.15
