--- a/.github/workflows/test-cpan-installer.yml
+++ b/.github/workflows/test-cpan-installer.yml
@@ -66,8 +66,9 @@ jobs:
           working-directory: __test__/p5-Test-Module
       - name: print the version of App::a2p and use it
         run: |
+          # shellcheck disable=SC2016
           perl -MApp::a2p -e 'print $App::a2p::VERSION'
-          echo '$1' | a2p
+          echo "\$1" | a2p
 
       - name: print the version of ExtUtils::MakeMaker
         run: |
