--- a/.github/workflows/win32.yml
+++ b/.github/workflows/win32.yml
@@ -48,7 +48,7 @@ jobs:
           if [ -n "$PERL_VERSIONS" ]; then
             echo "::set-output name=matrix::$(printenv PERL_VERSIONS | jq -c '{perl: .}')"
           else
-            echo "::set-output name=matrix::$(cat versions/win32.json | jq -c '{perl: .}')"
+            echo "::set-output name=matrix::$(<versions/win32.json jq -c '{perl: .}')"
           fi
         env:
           PERL_VERSIONS: ${{ github.event.inputs.perl-versions }}
@@ -78,7 +78,7 @@ jobs:
         name: setup host perl
         shell: bash
         run: |
-          cat << 'END_OF_PATH' >> $GITHUB_PATH
+          cat << 'END_OF_PATH' >> "$GITHUB_PATH"
           C:\strawberry\c\bin
           C:\strawberry\perl\site\bin
           C:\strawberry\perl\bin
@@ -133,7 +133,7 @@ jobs:
         if: failure()
       - run: |
           pip install minidump
-          minidump --all *.dmp
+          minidump --all ./*.dmp
         if: failure()
         shell: bash
         working-directory: ${{ runner.temp }}/perl-wer
@@ -173,7 +173,7 @@ jobs:
         name: setup host perl
         shell: bash
         run: |
-          cat << 'END_OF_PATH' >> $GITHUB_PATH
+          cat << 'END_OF_PATH' >> "$GITHUB_PATH"
           C:\MinGW\bin
           C:\strawberry\perl\site\bin
           C:\strawberry\perl\bin
@@ -222,7 +222,7 @@ jobs:
         if: failure()
       - run: |
           pip install minidump
-          minidump --all *.dmp
+          minidump --all ./*.dmp
         if: failure()
         shell: bash
         working-directory: ${{ runner.temp }}/perl-wer
