Upload assets to release (#924)
* create a new release

* upload to GitHub Release

* fix syntax error

* fox syntax error 2

* fix actionlint warnings

* update download urls

* remove extra command

--- a/.github/workflows/darwin.yml
+++ b/.github/workflows/darwin.yml
@@ -50,7 +50,7 @@ jobs:
           if [ -n "$PERL_VERSIONS" ]; then
             echo "::set-output name=matrix::$(printenv PERL_VERSIONS | jq -c '{perl: .}')"
           else
-            echo "::set-output name=matrix::$(cat versions/darwin.json | jq -c '{perl: .}')"
+            echo "::set-output name=matrix::$(<versions/darwin.json jq -c '{perl: .}')"
           fi
         env:
           PERL_VERSIONS: ${{ github.event.inputs.perl-versions }}
@@ -71,7 +71,7 @@ jobs:
       - id: perl
         name: setup host perl
         run: |
-          perl -MConfig -E 'say "$Config{bin}"' >> $GITHUB_PATH
+          perl -MConfig -E 'say "$Config{bin}"' >> "$GITHUB_PATH"
           perl -e 'print "::set-output name=version::$^V"'
       - name: Host perl -V
         run: perl -V
@@ -98,18 +98,13 @@ jobs:
           PERL5LIB: ${{ github.workspace }}/scripts/darwin/local/lib/perl5
         working-directory: ./scripts/darwin
 
-      - uses: kheiakiyama/install-azcopy-action@v1
-        with:
-          version: "v10"
       - name: upload
         run: |
-          ACTIONS_VERSION=v$(cat "$GITHUB_WORKSPACE/package.json" | jq -r .version)
-          azcopy_v10 login --service-principal --application-id "$AZCOPY_SPA_APPLICATION_ID" --tenant-id "$AZCOPY_TENANT_ID"
-          azcopy_v10 cp "$RUNNER_TEMP/perl.tar.zstd" "https://setupperl.blob.core.windows.net/actions-setup-perl/$ACTIONS_VERSION/perl-$PERL_VERSION-darwin-x64.tar.zstd"
+          ACTIONS_VERSION=v$(<"$GITHUB_WORKSPACE/package.json" jq -r .version)
+          mv "$RUNNER_TEMP/perl.tar.zstd" "$RUNNER_TEMP/perl-$PERL_VERSION-darwin-x64.tar.zstd"
+          gh release upload --clobber "$ACTIONS_VERSION" "$RUNNER_TEMP/perl-$PERL_VERSION-darwin-x64.tar.zstd"
         env:
-          AZCOPY_SPA_APPLICATION_ID: ${{ secrets.AZCOPY_SPA_APPLICATION_ID }}
-          AZCOPY_SPA_CLIENT_SECRET: ${{ secrets.AZCOPY_SPA_CLIENT_SECRET }}
-          AZCOPY_TENANT_ID: ${{ secrets.AZCOPY_TENANT_ID }}
+          GITHUB_TOKEN: ${{ github.token }}
 
   build-multi-thread:
     runs-on: macos-10.15
@@ -126,7 +121,8 @@ jobs:
       - id: perl
         name: setup host perl
         run: |
-          perl -MConfig -E 'say "$Config{bin}"' >> $GITHUB_PATH
+          perl -MConfig -E 'say "$Config{bin}"' >> "$GITHUB_PATH"
+          # shellcheck disable=SC2016
           perl -e 'print "::set-output name=version::$^V"'
       - name: Host perl -V
         run: perl -V
@@ -153,15 +149,10 @@ jobs:
           PERL5LIB: ${{ github.workspace }}/scripts/darwin/local/lib/perl5
         working-directory: ./scripts/darwin
 
-      - uses: kheiakiyama/install-azcopy-action@v1
-        with:
-          version: "v10"
       - name: upload
         run: |
-          ACTIONS_VERSION=v$(cat "$GITHUB_WORKSPACE/package.json" | jq -r .version)
-          azcopy_v10 login --service-principal --application-id "$AZCOPY_SPA_APPLICATION_ID" --tenant-id "$AZCOPY_TENANT_ID"
-          azcopy_v10 cp "$RUNNER_TEMP/perl.tar.zstd" "https://setupperl.blob.core.windows.net/actions-setup-perl/$ACTIONS_VERSION/perl-$PERL_VERSION-darwin-x64-multi-thread.tar.zstd"
+          ACTIONS_VERSION=v$(<"$GITHUB_WORKSPACE/package.json" jq -r .version)
+          mv "$RUNNER_TEMP/perl.tar.zstd" "$RUNNER_TEMP/perl-$PERL_VERSION-darwin-x64-multi-thread.tar.zstd"
+          gh release upload --clobber "$ACTIONS_VERSION" "$RUNNER_TEMP/perl-$PERL_VERSION-darwin-x64-multi-thread.tar.zstd"
         env:
-          AZCOPY_SPA_APPLICATION_ID: ${{ secrets.AZCOPY_SPA_APPLICATION_ID }}
-          AZCOPY_SPA_CLIENT_SECRET: ${{ secrets.AZCOPY_SPA_CLIENT_SECRET }}
-          AZCOPY_TENANT_ID: ${{ secrets.AZCOPY_TENANT_ID }}
+          GITHUB_TOKEN: ${{ github.token }}
