--- a/.github/workflows/update-cpm.yml
+++ b/.github/workflows/update-cpm.yml
@@ -46,4 +46,5 @@ jobs:
         uses: shogo82148/actions-commit-and-create-pr@v1
         with:
           github-token: ${{ steps.generate_token.outputs.token }}
+          head-branch-prefix: "auto-update/cpm-"
           commit-message: "update cpm"
