--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -99,6 +99,7 @@ jobs:
       fail-fast: false
       matrix:
         os:
+          - macos-12
           - macos-11
           - macos-10.15
         multi-thread:
