fix syntax error

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -72,7 +72,7 @@ jobs:
         name: setup host perl
         run: |
           perl -MConfig -E 'say "$Config{bin}"' >> "$GITHUB_PATH"
-          perl -e 'print "version::$^V\n"' >> "$GITHUB_OUTPUT"
+          perl -e 'print "version=$^V\n"' >> "$GITHUB_OUTPUT"
       - name: Host perl -V
         run: perl -V
       - name: gcc --version
