run tests when Core.pm is updated

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,7 @@ on:
       - "action.yml"
       - ".prettierrc.json"
       - "tsconfig.json"
+      - "scripts/lib/Actions/**"
   push:
     branches:
       - "main"
