--- a/action.yml
+++ b/action.yml
@@ -52,9 +52,13 @@ outputs:
       The digest of perl -V.
       It contains useful information to use as the cache key,
       e.g. the platform, the version of perl, the compiler option for building perl.
+  cache-hit:
+    description: 'A boolean value to indicate if a cache was hit'
 runs:
   using: "node16"
-  main: "dist/index.js"
+  main: "dist/setup/index.js"
+  post: 'dist/cache-save/index.js'
+  post-if: success()
 branding:
   icon: "play"
   color: "blue"
