--- a/.github/workflows/win32.yml
+++ b/.github/workflows/win32.yml
@@ -55,9 +55,34 @@ jobs:
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
 
+  sanity-check:
+    runs-on: windows-latest
+    steps:
+      - id: perl
+        name: check pre-installed perl version
+        run: |
+          perl -e 'print "version=$^V"' >> "$GITHUB_OUTPUT"
+      - uses: actions/checkout@v3
+      - uses: actions/cache@v3
+        with:
+          path: scripts/windows/local
+          key: Windows-sanity-check-perl-${{ steps.perl.outputs.version }}-${{ hashFiles('scripts/windows/cpanfile.snapshot') }}
+          restore-keys: Windows-sanity-check-perl-${{ steps.perl.outputs.version }}-
+      - name: sanity check
+        run: |
+          ../../bin/carton install --deployment
+          ../../bin/carton exec perl -c build.pl
+          ../../bin/carton exec perl -I../lib -c ../lib/Devel/PatchPerl/Plugin/GitHubActions.pm
+          ../../bin/carton exec perl -I../lib -c ../lib/Devel/PatchPerl/Plugin/MinGW.pm
+          ../../bin/carton exec perl -I../lib -c ../lib/Devel/PatchPerl/Plugin/MinGWGNUmakefile.pm
+        working-directory: ./scripts/windows
+
+
   build:
     runs-on: windows-2019
-    needs: list
+    needs:
+      - list
+      - sanity-check
     timeout-minutes: 120
     strategy:
       fail-fast: false
