--- a/.github/workflows/update-build-tools.yml
+++ b/.github/workflows/update-build-tools.yml
@@ -53,6 +53,16 @@ jobs:
   windows:
     runs-on: windows-2019
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - uses: msys2/setup-msys2@v2
+        with:
+          install: make mingw-w64-x86_64-gcc nasm
+      - name: install OpenSSL
+        run: .github/build-openssl-win32.sh
+        shell: "msys2 {0}"
+
       - name: setup host perl
         shell: bash
         run: |
@@ -62,8 +72,6 @@ jobs:
           C:\strawberry\perl\bin
           END_OF_PATH
 
-      - name: Checkout
-        uses: actions/checkout@v3
       - run: "rm -f scripts/windows/cpanfile.snapshot"
         shell: bash
 
