--- a/.github/workflows/update-build-tools.yml
+++ b/.github/workflows/update-build-tools.yml
@@ -53,6 +53,9 @@ jobs:
   windows:
     runs-on: windows-2019
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
       - name: setup host perl
         shell: bash
         run: |
@@ -62,8 +65,6 @@ jobs:
           C:\strawberry\perl\bin
           END_OF_PATH
 
-      - name: Checkout
-        uses: actions/checkout@v3
       - run: "rm -f scripts/windows/cpanfile.snapshot"
         shell: bash
 
@@ -77,12 +78,31 @@ jobs:
           name: cpanfile.snapshot-windows
           path: scripts/windows/cpanfile.snapshot
 
+  common:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: carton install
+        shell: bash
+        run: |
+          rm -f cpanfile.snapshot
+          ../../bin/carton install
+        working-directory: ./scripts/common
+
+      - uses: actions/upload-artifact@v3
+        with:
+          name: cpanfile.snapshot-common
+          path: scripts/common/cpanfile.snapshot
+
   commit:
     runs-on: ubuntu-latest
     needs:
       - linux
       - darwin
       - windows
+      - common
     permissions:
       id-token: write
       contents: write
@@ -98,6 +118,7 @@ jobs:
           rm -f scripts/linux/cpanfile.snapshot
           rm -f scripts/darwin/cpanfile.snapshot
           rm -f scripts/windows/cpanfile.snapshot
+          rm -f scripts/common/cpanfile.snapshot
 
       - name: download cpanfile.snapshot for linux
         uses: actions/download-artifact@v3
@@ -114,6 +135,11 @@ jobs:
         with:
           name: cpanfile.snapshot-windows
           path: scripts/windows
+      - name: download cpanfile.snapshot for any-platform
+        uses: actions/download-artifact@v3
+        with:
+          name: cpanfile.snapshot-common
+          path: scripts/common
 
       - name: Generate token
         id: generate_token
