--- a/.github/workflows/darwin.yml
+++ b/.github/workflows/darwin.yml
@@ -115,7 +115,9 @@ jobs:
 
   build-multi-thread:
     runs-on: macos-11
-    needs: list
+    needs:
+      - sanity-check
+      - list
     timeout-minutes: 120
     strategy:
       fail-fast: false
