--- a/.github/workflows/darwin.yml
+++ b/.github/workflows/darwin.yml
@@ -39,7 +39,7 @@ jobs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
 
   sanity-check:
-    runs-on: darwin-latest
+    runs-on: macos-latest
     steps:
       - id: perl
         name: check pre-installed perl version
