lock the version of alpine

--- a/author/cpanm/Dockerfile
+++ b/author/cpanm/Dockerfile
@@ -1,6 +1,6 @@
 # Dockerfile for fatpacking environment
 
-FROM alpine:latest
+FROM alpine:3.18.0
 
 # build perl
 RUN apk add --no-cache gcc libc-dev curl perl patch make wget
