configure GH_TOKEN environment

--- a/.github/workflows/update-build-tools.yml
+++ b/.github/workflows/update-build-tools.yml
@@ -143,6 +143,8 @@ jobs:
       - name: update other dependencies
         run: |
           ./.github/update-dependencies.sh
+        env:
+          GH_TOKEN: ${{ github.token }}
 
       - name: Generate token
         id: generate_token
