--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.0",
   "description": "",
   "main": "lib/setup-perl.js",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "scripts": {
     "build": "tsc",
     "format": "prettier --write **/*.ts",
@@ -14,7 +17,7 @@
     "type": "git",
     "url": "git+ssh://git@github.com/shogo82148/actions-setup-perl.git"
   },
-  "author": "Ichinose Shogo",
+  "author": "ICHINOSE Shogo",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/shogo82148/actions-setup-perl/issues"
@@ -29,7 +32,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.5",
-    "@types/node": "^16.18.3",
+    "@types/node": "^20.6.2",
     "@types/semver": "^7.5.2",
     "@vercel/ncc": "^0.38.0",
     "jest": "^29.7.0",
