--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -100,6 +100,7 @@ jobs:
       fail-fast: false
       matrix:
         os:
+          - macos-14
           - macos-13
           - macos-12
           - macos-11
